src/App.css
:root {
  --background-color: rgb(252, 236, 239);
  --nav-color: rgb(40, 30, 10);
  --text-color2: #384959;
}
body {
  background: var(--background-color);
  margin: 0;
  padding: 0;
}
#logo {
  color: var(--background-color);
}

hr {
  border: none;
  height: 2px;
  margin: 0;
  background-color: var(--nav-color);
}

.nav {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.nav.top {
  background: var(--nav-color);
}
.nav.bot {
  color: var(--text-color2);
  margin: 10px 0;
}
#search-bar {
  width: 400px;
  border-radius: 3px;
  border: 0.5px solid black;
}

#find {
  width: fit-content;
  background: transparent;
  border: none;
}

#find > svg {
  color: var(--background-color);
  font-size: 20px;
}

.select {
  width: 130px;
}

#search-wrap > *:not(#find) {
  height: 100%;
  background: var(--background-color);
  color: var(--text-color2);
  border: 0.5px solid black;
  border-radius: 3px;
}

#search-wrap {
  display: flex;
  align-items: center;
  height: 30px;
  gap: 10px;
}

a {
  text-decoration: none;
  color: var(--text-color1);
}

.grid {
  display: flex;
  flex-wrap: wrap;
  margin: 30px 200px;
  align-items: center;
  justify-content: center;
  gap: 20px;
}
.grid > div {
  border: 0.5px solid black;
  width: 200px;
  height: 300px;
}

#profile-banner {
  padding-top: 50px;
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
}

#profile-wrap {
  display: flex;
  gap: 20px;
  margin: auto auto 20px 20px;
}

.profile-circle {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  border: 0.5px solid black;
  background: white;
  object-fit: cover;
}

.description {
  display: flex;
  flex-direction: column;
}

#sign-out-button {
  margin-right: 20px;
}

#add-icon {
  width: 100%;
  height: 100%;
  color: var(--background-color);
  margin: 0;
  padding: 0;
}

#account-icon {
  width: 80%;
  height: 80%;
  color: var(--background-color);
}

.icon-wrapper {
  display: flex;
  align-items: center;
  width: 30px;
  height: 30px;
}

.nav-icons {
  display: flex;
  gap: 20px;
  justify-content: center;
}

.form {
  display: flex;
  width: 500px;
  height: 300px;
  margin: auto;
  flex-direction: column;
  align-items: center;
  border: 0.5px solid black;
  gap: 10px;
}

.form-input {
  width: 60%;
  height: 25px;
}

.feed-buttons {
  background: none;
  border: none;
}

.post-container {
  display: flex;
  flex-direction: column;
  width: 250px;
  height: fit-content;
  border: 1px solid black;
  border-radius: 10px;
  overflow: hidden;
  padding: 10px;
  gap: 10px;
}

.post-image {
  width: 100%;
  height: auto;
  border-radius: 10px;
}

.post-grid {
  margin: 20px;
  gap: 20px;
  display: flex;
}

.post-profile-circle {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  border: 1px solid black;
}

.post-top-bar {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.user-info {
  display: flex;
  align-items: center;
  gap: 10px;
}
.likes {
  display: flex;
  align-items: center;
  height: fit-content;
  gap: 5px;
}

.like-button {
  display: flex;
  padding: 0;
  border: none;
  background: none;
}

.like-button > svg {
  font-size: 20px;
  margin: 0;
  padding: 0;
}

#post-form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0 200px;
}

.images-container {
  display: flex;
  width: 100%;
  flex-wrap: wrap;
  height: fit-content;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

.image-topbar {
  display: flex;
  justify-content: space-between;
}

.preview-img {
  width: 200px;
  height: auto;
  object-fit: cover;
}

.delete-img {
  display: flex;
}
.delete-img > svg {
  padding: 0;
  margin: 0;
  font-size: 20px;
}

input[type="file"] {
  display: none;
}

.upload-img-button {
  padding: 1px 6px;
  border-radius: 2px;
  border: 1px solid black;
  background: #efefef;
}

.post-page-container {
  margin: 0 10vw;
  width: 80vw;
  height: 100vh;
  display: flex;
  justify-content: space-between;
}

.post-side {
  width: 50%;
  height: 100%;
  border: 1px solid black;
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

.post-side.left > img {
  width: 100%;
  object-fit: cover;
}

